--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     </div>
 
     <div class="col justify-content">
-        <button id="clickitem" class="bg-transparent border-0" type="submit">
+        <button id="clickitem" class="click-item bg-transparent border-0" type="submit">
             <img class="w-50" src="~/hamster.png" />
         </button>
     </div>
@@ -37,7 +37,7 @@
                     <span class="boost-id" hidden>@boost.Id</span>
                     <h4>@boost.Title</h4>
                     <img src="data:image/png;base64, @Convert.ToBase64String(boost.Image)" height="100" />
-                    <h5>Цена: @price</h5>
+                    <h5 class="boost-price-string">Цена: <span class="boost-price">@price</span></h5>
                     <h5>
                         Доход: @boost.Profit
                         @if (boost.IsAuto)
@@ -46,7 +46,7 @@
                         }
                     </h5>
                     <h5>
-                        Количество приобретенных бустов: @quantity
+                        Количество приобретенных бустов: <span class="boost-quantity">@quantity</span>
                     </h5>
                 </button>
             }
