--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,13 +4,12 @@
     <meta name="viewport" content="width=device-width" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>@ViewBag.Title</title>
-    @RenderSectionAsync("styles", required: false)
+    @await RenderSectionAsync("styles", required: false)
 </head>
 <body>
-    <h2>@ViewBag.Title</h2>
     <div>
         @RenderBody()
     </div>
-    @RenderSectionAsync("scripts", required: false)
+    @await RenderSectionAsync("scripts", required: false)
 </body>
 </html>
